Updated ReadMe and the logging configuration file.